# TweeEditor

./: .gitignore  CMakeLists.txt  FindDialog.cpp  FindDialog.h  LICENSE  PKGBUILD  README.md  TweeBugReportDialog.cpp  TweeBugReportDialog.h  TweeEdit.pro  TweeEdit.pro.user.3971d8a  TweeFirstUseDialog.cpp  TweeFirstUseDialog.h  TweeLanguageDialog.cpp  TweeLanguageDialog.h  TweeSimpleEdit_pl_PL.qm  TweeSimpleEdit_pl_PL.ts  TweeSimpleEdit_zh_CN.qm  TweeSimpleEdit_zh_CN.ts  events.cpp  main.cpp  mainwindow.h  mainwindow_basic.cpp  mainwindow_events.cpp  mainwindow_oncreate.cpp  mainwindow_slots.cpp  mainwindow_slots_edit.cpp  mainwindow_slots_file.cpp  mainwindow_slots_help.cpp  mainwindow_slots_view.cpp  resource.qrc  special_events.cpp  tweefirstusedialog.cpp
readme/: README-CN.md
translations/: TweeSimpleEdit_pl_PL.qm  TweeSimpleEdit_pl_PL.ts  TweeSimpleEdit_zh_CN.qm  TweeSimpleEdit_zh_CN.ts
